feat(angular/radiobutton): combine checkbox and radiobutton variables to selection

--- a/src/angular/styles/_typography.scss
+++ b/src/angular/styles/_typography.scss
@@ -199,35 +199,20 @@
   --sbb-ghost-button-label-color: var(--sbb-color-granite);
   --sbb-ghost-button-label-color-disabled: var(--sbb-color-iron-alpha40);
 
-  // Checkbox
-  --sbb-checkbox-background-color-default: var(--sbb-color-background);
-  --sbb-checkbox-background-color-disabled: var(--sbb-color-milk);
+  // Checkbox & Radiobutton
+  --sbb-selection-box-background-color-default: var(--sbb-color-background);
+  --sbb-selection-box-background-color-disabled: var(--sbb-color-milk);
 
-  --sbb-checkbox-border-color-default: var(--sbb-color-graphite);
-  --sbb-checkbox-border-color-disabled: var(--sbb-color-aluminum);
+  --sbb-selection-box-border-color-default: var(--sbb-color-graphite);
+  --sbb-selection-box-border-color-disabled: var(--sbb-color-aluminum);
 
-  --sbb-checkbox-icon-color-default: var(--sbb-color-red);
-  --sbb-checkbox-icon-color-disabled: var(--sbb-color-granite);
-  --sbb-checkbox-border-color-focused: var(--sbb-color-weak-accent);
+  --sbb-selection-box-icon-color-default: var(--sbb-color-red);
+  --sbb-selection-box-icon-color-disabled: var(--sbb-color-granite);
+  --sbb-selection-box-border-color-focused: var(--sbb-color-weak-accent);
 
-  --sbb-checkbox-label-color-checked: var(--sbb-color-iron);
-  --sbb-checkbox-label-color-unchecked: var(--sbb-color-granite);
-  --sbb-checkbox-label-color-disabled: var(--sbb-color-granite);
-
-  // Checkbox
-  --sbb-checkbox-background-color-default: var(--sbb-color-background);
-  --sbb-checkbox-background-color-disabled: var(--sbb-color-milk);
-
-  --sbb-checkbox-border-color-default: var(--sbb-color-graphite);
-  --sbb-checkbox-border-color-disabled: var(--sbb-color-aluminum);
-
-  --sbb-checkbox-icon-color-default: var(--sbb-color-red);
-  --sbb-checkbox-icon-color-disabled: var(--sbb-color-granite);
-  --sbb-checkbox-border-color-focused: var(--sbb-color-weak-accent);
-
-  --sbb-checkbox-label-color-checked: var(--sbb-color-iron);
-  --sbb-checkbox-label-color-unchecked: var(--sbb-color-granite);
-  --sbb-checkbox-label-color-disabled: var(--sbb-color-granite);
+  --sbb-selection-label-color-checked: var(--sbb-color-iron);
+  --sbb-selection-label-color-unchecked: var(--sbb-color-granite);
+  --sbb-selection-label-color-disabled: var(--sbb-color-granite);
 
   // Chips
   --sbb-chips-list-height: var(--sbb-form-input-min-height);
@@ -326,22 +311,6 @@
   --sbb-pagination-disabled-color: var(--sbb-color-silver);
   --sbb-pagination-paginator-size: calc(#{sbb.pxToRem(40)} * var(--sbb-scaling-factor));
   --sbb-pagination-navigation-item-margin: calc(#{sbb.pxToRem(4)} * var(--sbb-scaling-factor));
-
-  // Radiobutton
-  --sbb-radiobutton-background-color-default: var(--sbb-color-background);
-  --sbb-radiobutton-background-color-disabled: var(--sbb-color-milk);
-
-  --sbb-radiobutton-border-color-default: var(--sbb-color-graphite);
-  --sbb-radiobutton-border-color-focused: var(--sbb-color-weak-accent);
-  --sbb-radiobutton-border-color-disabled: var(--sbb-color-aluminum);
-  --sbb-radiobutton-border-color-error: var(--sbb-color-red);
-
-  --sbb-radiobutton-selector-color-default: var(--sbb-color-red);
-  --sbb-radiobutton-selector-color-error: var(--sbb-color-red);
-
-  --sbb-radiobutton-label-color-checked: var(--sbb-color-text);
-  --sbb-radiobutton-label-color-unchecked: var(--sbb-color-granite);
-  --sbb-radiobutton-label-color-disabled: var(--sbb-color-granite);
 
   // Sidebar
   --sbb-sidebar-mobile-menu-bar-height: calc(2 * var(--sbb-icon-size-default));
@@ -584,33 +553,19 @@
     --sbb-secondary-button-background-color-disabled: var(--sbb-color-silver-alpha40);
     --sbb-secondary-button-color-disabled: var(--sbb-color-iron-alpha50);
 
-    // Checkbox
-    --sbb-checkbox-background-color-default: var(--sbb-color-white);
-    --sbb-checkbox-background-color-disabled: var(--sbb-color-milk);
+    // Checkbox & Radiobutton
+    --sbb-selection-box-background-color-default: var(--sbb-color-white);
+    --sbb-selection-box-background-color-disabled: var(--sbb-color-milk);
 
-    --sbb-checkbox-border-color-default: var(--sbb-color-smoke);
-    --sbb-checkbox-border-color-disabled: var(--sbb-color-smoke);
+    --sbb-selection-box-border-color-default: var(--sbb-color-smoke);
+    --sbb-selection-box-border-color-disabled: var(--sbb-color-smoke);
 
-    --sbb-checkbox-icon-color-default: var(--sbb-color-iron);
-    --sbb-checkbox-icon-color-disabled: var(--sbb-color-iron);
+    --sbb-selection-box-icon-color-default: var(--sbb-color-iron);
+    --sbb-selection-box-icon-color-disabled: var(--sbb-color-iron);
 
-    --sbb-checkbox-label-color-checked: var(--sbb-color-iron);
-    --sbb-checkbox-label-color-unchecked: var(--sbb-color-granite);
-    --sbb-checkbox-label-color-disabled: var(--sbb-color-granite);
-
-    // Checkbox
-    --sbb-checkbox-background-color-default: var(--sbb-color-white);
-    --sbb-checkbox-background-color-disabled: var(--sbb-color-milk);
-
-    --sbb-checkbox-border-color-default: var(--sbb-color-smoke);
-    --sbb-checkbox-border-color-disabled: var(--sbb-color-smoke);
-
-    --sbb-checkbox-icon-color-default: var(--sbb-color-iron);
-    --sbb-checkbox-icon-color-disabled: var(--sbb-color-iron);
-
-    --sbb-checkbox-label-color-checked: var(--sbb-color-iron);
-    --sbb-checkbox-label-color-unchecked: var(--sbb-color-granite);
-    --sbb-checkbox-label-color-disabled: var(--sbb-color-granite);
+    --sbb-selection-label-color-checked: var(--sbb-color-iron);
+    --sbb-selection-label-color-unchecked: var(--sbb-color-granite);
+    --sbb-selection-label-color-disabled: var(--sbb-color-granite);
 
     // Datepicker
     --sbb-datepicker-toggle-or-arrows-padding: calc(#{sbb.pxToRem(38)} - var(--sbb-border-width));
@@ -658,22 +613,6 @@
     --sbb-pagination-disabled-color: var(--sbb-color-cement);
     --sbb-pagination-paginator-size: #{sbb.pxToRem(30)};
 
-    // Radiobutton
-    --sbb-radiobutton-background-color-default: var(--sbb-color-background);
-    --sbb-radiobutton-background-color-disabled: var(--sbb-color-milk);
-
-    --sbb-radiobutton-border-color-default: var(--sbb-color-smoke);
-    --sbb-radiobutton-border-color-focused: var(--sbb-color-iron);
-    --sbb-radiobutton-border-color-error: var(--sbb-color-red);
-
-    --sbb-radiobutton-selector-color-default: var(--sbb-color-iron);
-    --sbb-radiobutton-selector-color-disabled: var(--sbb-color-iron);
-    --sbb-radiobutton-selector-color-error: var(--sbb-color-red);
-
-    --sbb-radiobutton-label-color-checked: var(--sbb-color-iron);
-    --sbb-radiobutton-label-color-unchecked: var(--sbb-color-granite);
-    --sbb-radiobutton-label-color-disabled: var(--sbb-color-granite);
-
     // Table
     --sbb-table-cell-padding-vertical: #{sbb.pxToRem(6)};
 
@@ -712,20 +651,20 @@
     &:where(.sbb-lean.sbb-dark) {
       --sbb-color-weak-accent: var(--sbb-color-milk);
 
-      // Checkbox
-      --sbb-checkbox-background-color-default: var(--sbb-color-background);
-      --sbb-checkbox-background-color-disabled: var(--sbb-color-charcoal);
+      // Checkbox & Radiobutton
+      --sbb-selection-box-background-color-default: var(--sbb-color-background);
+      --sbb-selection-box-background-color-disabled: var(--sbb-color-charcoal);
 
-      --sbb-checkbox-border-color-default: var(--sbb-color-graphite);
-      --sbb-checkbox-border-color-disabled: var(--sbb-color-smoke);
-      --sbb-checkbox-border-color-focused: var(--sbb-color-text);
+      --sbb-selection-box-border-color-default: var(--sbb-color-graphite);
+      --sbb-selection-box-border-color-disabled: var(--sbb-color-smoke);
+      --sbb-selection-box-border-color-focused: var(--sbb-color-text);
 
-      --sbb-checkbox-icon-color-default: var(--sbb-color-text);
-      --sbb-checkbox-icon-color-disabled: var(--sbb-color-smoke);
+      --sbb-selection-box-icon-color-default: var(--sbb-color-text);
+      --sbb-selection-box-icon-color-disabled: var(--sbb-color-smoke);
 
-      --sbb-checkbox-label-color-checked: var(--sbb-color-text);
-      --sbb-checkbox-label-color-unchecked: var(--sbb-color-graphite);
-      --sbb-checkbox-label-color-disabled: var(--sbb-color-smoke);
+      --sbb-selection-label-color-checked: var(--sbb-color-text);
+      --sbb-selection-label-color-unchecked: var(--sbb-color-graphite);
+      --sbb-selection-label-color-disabled: var(--sbb-color-smoke);
 
       // Context colors
       --sbb-color-background: var(--sbb-color-black);
@@ -756,22 +695,6 @@
       --sbb-menu-item-label-active: var(--sbb-color-white);
       --sbb-menu-item-background-color-hover: transparent;
       --sbb-menu-item-background-color-active: var(--sbb-color-charcoal);
-
-      // Radiobutton
-      --sbb-radiobutton-background-color-default: var(--sbb-color-background);
-      --sbb-radiobutton-background-color-disabled: var(--sbb-color-charcoal);
-
-      --sbb-radiobutton-border-color-default: var(--sbb-color-graphite);
-      --sbb-radiobutton-border-color-focused: var(--sbb-color-text);
-      --sbb-radiobutton-border-color-error: var(--sbb-color-red_dark-mode);
-
-      --sbb-radiobutton-selector-color-default: var(--sbb-color-text);
-      --sbb-radiobutton-selector-color-disabled: var(--sbb-color-smoke);
-      --sbb-radiobutton-selector-color-error: var(--sbb-color-red_dark-mode);
-
-      --sbb-radiobutton-label-color-checked: var(--sbb-color-text);
-      --sbb-radiobutton-label-color-unchecked: var(--sbb-color-graphite);
-      --sbb-radiobutton-label-color-disabled: var(--sbb-color-smoke);
 
       // Pagination
       --sbb-pagination-base-color: var(--sbb-color-silver);
@@ -1962,14 +1885,14 @@ textarea {
 
 .sbb-selection-container {
   display: inline-block;
-  background-color: var(--sbb-checkbox-background-color-default);
+  background-color: var(--sbb-selection-box-background-color-default);
   margin-top: calc(#{sbb.pxToRem(3)} * var(--sbb-scaling-factor));
 
   width: calc(#{sbb.pxToRem(20)} * var(--sbb-scaling-factor));
   min-width: calc(#{sbb.pxToRem(20)} * var(--sbb-scaling-factor));
   height: calc(#{sbb.pxToRem(20)} * var(--sbb-scaling-factor));
   min-height: calc(#{sbb.pxToRem(20)} * var(--sbb-scaling-factor));
-  border: var(--sbb-border-width) solid var(--sbb-checkbox-border-color-default);
+  border: var(--sbb-border-width) solid var(--sbb-selection-box-border-color-default);
   margin-right: calc(#{sbb.pxToRem(8)} * var(--sbb-scaling-factor));
 
   :where(html.sbb-lean) & {
@@ -1995,8 +1918,8 @@ textarea {
   }
 
   .sbb-selection-disabled & {
-    border-color: var(--sbb-checkbox-border-color-disabled);
-    background-color: var(--sbb-checkbox-background-color-disabled);
+    border-color: var(--sbb-selection-box-border-color-disabled);
+    background-color: var(--sbb-selection-box-background-color-disabled);
   }
 
   .sbb-selection-indeterminate &::before {
@@ -2006,16 +1929,16 @@ textarea {
     width: sbb.pxToRem(10);
     left: calc(50% - #{sbb.pxToRem(5)});
     top: calc(50% - #{sbb.pxToRem(0.5)});
-    border: sbb.pxToRem(1) solid var(--sbb-checkbox-icon-color-default);
+    border: sbb.pxToRem(1) solid var(--sbb-selection-box-icon-color-default);
     display: block;
     background-color: var(
-      --sbb-checkbox-icon-color-default
+      --sbb-selection-box-icon-color-default
     ); // Used to fill line when user has activated browser zoom
   }
 }
 
 .sbb-selection-container-checked {
-  color: var(--sbb-checkbox-icon-color-default);
+  color: var(--sbb-selection-box-icon-color-default);
   line-height: 0;
   height: 100%;
   width: 100%;
@@ -2046,11 +1969,7 @@ textarea {
     display: none;
     border-radius: 50%;
     transform: scale(0.65);
-    background-color: var(--sbb-color-red);
-
-    :where(html.sbb-lean) & {
-      background-color: var(--sbb-color-iron);
-    }
+    background-color: var(--sbb-selection-box-icon-color-default);
 
     @include cdk.high-contrast(active, off) {
       background-color: CanvasText;
@@ -2058,7 +1977,13 @@ textarea {
   }
 
   .sbb-selection-disabled & {
-    color: var(--sbb-checkbox-icon-color-disabled);
+    color: var(--sbb-selection-box-icon-color-disabled);
+  }
+
+  .sbb-radio-button.sbb-selection-disabled & {
+    :where(html.sbb-lean) & {
+      background-color: var(--sbb-selection-box-icon-color-disabled);
+    }
   }
 
   .sbb-selection-checked & {
@@ -2072,7 +1997,7 @@ textarea {
 
 .sbb-selection-content {
   @include sbb.user-select(auto);
-  color: var(--sbb-checkbox-label-color-unchecked);
+  color: var(--sbb-selection-label-color-unchecked);
   transition: color var(--sbb-transition-default);
 
   :where(html.sbb-lean) & {
@@ -2080,11 +2005,11 @@ textarea {
   }
 
   :is(.sbb-selection-checked, .sbb-selection-indeterminate) & {
-    color: var(--sbb-checkbox-label-color-checked);
+    color: var(--sbb-selection-label-color-checked);
   }
 
   .sbb-selection-disabled & {
-    color: var(--sbb-checkbox-label-color-disabled);
+    color: var(--sbb-selection-label-color-disabled);
   }
 }
 
