--- a/src/angular/styles/_typography.scss
+++ b/src/angular/styles/_typography.scss
@@ -300,6 +300,8 @@
   --sbb-header-lean-menu-tablet-z-index: 700;
   --sbb-header-lean-menu-width: calc(#{sbb.pxToRem(300)} * var(--sbb-scaling-factor));
   --sbb-header-lean-label-line-height: calc(#{sbb.pxToRem(25)} * var(--sbb-scaling-factor));
+  --sbb-header-lean-subtitle-color: var(--sbb-color-anthracite);
+  --sbb-header-lean-border-bottom-color: var(--sbb-color-silver);
 
   // Lightbox
   --sbb-lightbox-padding-horizontal: #{sbb.pxToRem(24)};
@@ -758,6 +760,10 @@
       --sbb-form-input-border-color-disabled: var(--sbb-color-smoke);
       --sbb-form-input-background-color-disabled: var(--sbb-color-iron);
       --sbb-form-label-color: var(--sbb-color-smoke);
+
+      // Header
+      --sbb-header-lean-subtitle-color: var(--sbb-color-graphite);
+      --sbb-header-lean-border-bottom-color: var(--sbb-color-graphite);
 
       // Menu
       --sbb-menu-item-label: var(--sbb-color-milk);
