feat(angular/menu): implement dark mode

--- a/src/angular/menu/menu.scss
+++ b/src/angular/menu/menu.scss
@@ -44,6 +44,7 @@ sbb-menu {
   border-radius: var(--sbb-border-radius);
   box-shadow: var(--sbb-box-shadow-below);
   border-top-width: var(--sbb-border-width);
+  border-color: var(--sbb-color-weak-accent);
 
   button.sbb-menu-item {
     width: 100%;
@@ -89,7 +90,7 @@ sbb-menu {
   padding: var(--sbb-menu-trigger-padding);
   outline: 0;
   cursor: pointer;
-  color: var(--sbb-color-black);
+  color: var(--sbb-menu-item-label);
 
   &:is(:hover, :active, :focus) {
     color: var(--sbb-color-call-to-action-hover);
@@ -133,7 +134,7 @@ sbb-menu {
   }
 
   &:is(:hover, :active, :focus) {
-    color: var(--sbb-color-black);
+    color: var(--sbb-menu-item-label-active);
   }
 }
 
