--- a/src/angular/styles/_typography.scss
+++ b/src/angular/styles/_typography.scss
@@ -342,6 +342,8 @@
   --sbb-menu-item-label-active: var(--sbb-color-black);
   --sbb-menu-item-background-color-hover: var(--sbb-color-milk);
   --sbb-menu-item-background-color-active: var(--sbb-color-cloud);
+  --sbb-menu-panel-divider-color: var(--sbb-color-cloud);
+  --sbb-menu-title-color: var(--sbb-color-granite);
 
   // Notification Toast
   // Success
@@ -800,6 +802,8 @@
       --sbb-menu-item-label-active: var(--sbb-color-white);
       --sbb-menu-item-background-color-hover: transparent;
       --sbb-menu-item-background-color-active: var(--sbb-color-charcoal);
+      --sbb-menu-panel-divider-color: var(--sbb-color-graphite);
+      --sbb-menu-title-color: var(--sbb-color-smoke);
 
       // Pagination
       --sbb-pagination-base-color: var(--sbb-color-silver);
@@ -2767,7 +2771,7 @@ $panelBorderRadius: 2;
     margin: sbb.pxToRem(10) 0;
     padding: 0;
     border: none;
-    border-top: var(--sbb-border-width-thin) solid var(--sbb-panel-divider-color);
+    border-top: var(--sbb-border-width-thin) solid var(--sbb-menu-panel-divider-color);
 
     :where(html.sbb-lean) & {
       margin: sbb.pxToRem(4) 0;
@@ -2780,7 +2784,7 @@ $panelBorderRadius: 2;
       calc(#{sbb.pxToRem(14)} * var(--sbb-scaling-factor));
 
     :where(html.sbb-lean) & {
-      color: var(--sbb-color-granite);
+      color: var(--sbb-menu-title-color);
       padding: sbb.pxToRem(4) sbb.pxToRem(8);
     }
   }
