--- a/src/angular/styles/_typography.scss
+++ b/src/angular/styles/_typography.scss
@@ -2764,6 +2764,7 @@ $panelBorderRadius: 2;
   position: relative;
   top: var(--sbb-box-shadow-horizontal-border-offset-top-below);
   box-shadow: var(--sbb-box-shadow-below), var(--sbb-box-shadow-horizontal-border-bottom);
+  border-color: var(--sbb-color-weak-accent);
 
   hr {
     margin: sbb.pxToRem(10) 0;
